--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     href="tg://resolve?domain=Oleksandr_Chepiha" 
                     class="copy-text" 
                     target="_blank"
-                    title="Перейти: tg://resolve?domain=Oleksandr_Chepiha>
+                    title="Перейти: tg://resolve?domain=Oleksandr_Chepiha">
                     @Oleksandr_Chepiha
 
                 </a>
@@ -201,4 +201,5 @@
 
 <script src="script.js"></script>
 </body>
+
 </html>
