--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
                         <li>Безмежна тривалість</li>
                         <li>Повна персоналізація</li>
                     </ul>
-                    <p class="new_price">Від 130 грн/хв</p>
+                    <p class="new_price">Від 125 грн/хв</p>
                     <p class="old_price">150грн/хв</p>
-                    <a href="https://tally.so/r/lb6Mav?name=Преміум&price=130" target="_blank" class="btn">Замовити</a>
+                    <a href="https://tally.so/r/lb6Mav?name=Преміум&price=125" target="_blank" class="btn">Замовити</a>
                 </div>
             </div> 
         </section>
@@ -172,6 +172,7 @@
                     </div>
                     <div class="support-text-side">
                         <p>Ваші донати допомагають мені покращувати якість монтажу та оновлювати обладнання. Буду вдячний за підтримку моєї творчості!</p>
+                        <a href="https://www.privat24.ua/send/ipcgk">Перейти до конверту</a>
                     </div>
                 </div>
             </div>
